<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_detail"
    tools:context=".ui.activity.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/detail_movie_cover"
                android:layout_width="0dp"
                android:layout_height="245dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_loading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                app:cardCornerRadius="@dimen/size_8"
                app:layout_constraintBottom_toBottomOf="@+id/gd_cover"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gd_cover">

                <ImageView
                    android:id="@+id/detail_movie_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder_loading"
                    android:transitionName="@string/transition_name"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/detail_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/size_8"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/bold"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/medium"
                android:text="@string/overview"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/detail_movie_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/rv_genre"
                app:layout_constraintTop_toBottomOf="@+id/rv_genre" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="245dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16"
                android:src="@drawable/ic_unfavorite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
